# fastapi_app_template

./: .env  .env.example  .pylintrc  README.md  pyproject.toml
src/: database.py  main.py
src/api/: user_api.py
src/auth/: auth_config.py
src/config/: app_config.py  http_status_codes.py  logger_decorator.py
src/dto/: response_dto.py  user_dto.py
src/exception/: user_exception.py
src/model/: user_model.py
src/repository/: user_repository.py
src/service/: login_service.py  user_service.py
src/util/: response.py
tests/api/: test_user_api.py
tests/factories/: user_factories.py
tests/fixtures/: data_fixtures.py  setup_fixtures.py
tests/repository/: test_user_repository.py
tests/service/: test_user_service.py
tests/test_api/: test_user_api.py
tests/test_repository/: test_user_repository.py
tests/test_service/: test_user_service.py
